--- a/src/NuGet/Microsoft.CodeAnalysis.Features.nuspec
+++ b/src/NuGet/Microsoft.CodeAnalysis.Features.nuspec
@@ -31,5 +31,8 @@
     <file src="Dlls\Features\Microsoft.CodeAnalysis.Features.xml" target="lib\netstandard1.3" />
     <file src="Dlls\Features\Microsoft.CodeAnalysis.Features.pdb*" target="lib\netstandard1.3" />
     <file src="$thirdPartyNoticesPath$" target="" />
+
+    <!-- Satellite assemblies -->
+    <file src="Dlls\Features\**\Microsoft.CodeAnalysis.Features.resources.dll" target="lib\netstandard1.3" />
   </files>
 </package>
