--- a/src/NuGet/Microsoft.CodeAnalysis.Remote.ServiceHub.nuspec
+++ b/src/NuGet/Microsoft.CodeAnalysis.Remote.ServiceHub.nuspec
@@ -36,5 +36,8 @@
     <file src="Dlls\ServiceHub\Microsoft.CodeAnalysis.Remote.ServiceHub.xml" target="lib\net46" />
     <file src="Dlls\ServiceHub\Microsoft.CodeAnalysis.Remote.ServiceHub.pdb*" target="lib\net46" />
     <file src="$thirdPartyNoticesPath$" target="" />
+
+    <!-- Satellite assemblies -->
+    <file src="Dlls\ServiceHub\**\Microsoft.CodeAnalysis.Remote.ServiceHub.resources.dll" target="lib\net46" />
   </files>
 </package>
