--- a/src/NuGet/Microsoft.CodeAnalysis.VisualBasic.CodeStyle.nuspec
+++ b/src/NuGet/Microsoft.CodeAnalysis.VisualBasic.CodeStyle.nuspec
@@ -33,6 +33,12 @@
     <file src="Dlls\CodeStyleFixes\Microsoft.CodeAnalysis.CodeStyle.Fixes.dll" target="analyzers\dotnet\vb" />
     <file src="$thirdPartyNoticesPath$" target="" />
 
+    <!-- Satellite assemblies -->
+    <file src="Dlls\BasicCodeStyle\**\Microsoft.CodeAnalysis.VisualBasic.CodeStyle.resources.dll" target="analyzers\dotnet\vb" />
+    <file src="Dlls\BasicCodeStyleFixes\**\Microsoft.CodeAnalysis.VisualBasic.CodeStyle.Fixes.resources.dll" target="analyzers\dotnet\vb" />
+    <file src="Dlls\CodeStyle\**\Microsoft.CodeAnalysis.CodeStyle.resources.dll" target="analyzers\dotnet\vb" />
+    <file src="Dlls\CodeStyleFixes\**\Microsoft.CodeAnalysis.CodeStyle.Fixes.resources.dll" target="analyzers\dotnet\vb" />
+
     <!-- Scripts -->
     <file src="..\..\src\Setup\PowerShell\install.ps1" target="tools\" />
     <file src="..\..\src\Setup\PowerShell\uninstall.ps1" target="tools\" />
