--- a/src/NuGet/Microsoft.CodeAnalysis.VisualBasic.Scripting.nuspec
+++ b/src/NuGet/Microsoft.CodeAnalysis.VisualBasic.Scripting.nuspec
@@ -34,5 +34,8 @@
     <file src="Dlls\BasicScripting\Microsoft.CodeAnalysis.VisualBasic.Scripting.xml" target="lib\dotnet" />
     <file src="Dlls\BasicScripting\Microsoft.CodeAnalysis.VisualBasic.Scripting.pdb*" target="lib\dotnet" />
     <file src="$thirdPartyNoticesPath$" target="" />
+
+    <!-- Satellite assemblies -->
+    <file src="Dlls\BasicScripting\**\Microsoft.CodeAnalysis.VisualBasic.Scripting.resources.dll" target="lib\dotnet" />
   </files>
 </package>
