--- a/src/NuGet/Microsoft.CodeAnalysis.Build.Tasks.nuspec
+++ b/src/NuGet/Microsoft.CodeAnalysis.Build.Tasks.nuspec
@@ -55,5 +55,9 @@
     <file src="Dlls\MSBuildTask\net46\Microsoft.CSharp.Core.targets" target="contentFiles\any\any" />
     <file src="Dlls\MSBuildTask\net46\Microsoft.VisualBasic.Core.targets" target="contentFiles\any\any" />
     <file src="$thirdPartyNoticesPath$" target="" />
+
+    <!-- Satellite assemblies -->
+    <file src="Dlls\MSBuildTask\netcoreapp2.0\**\Microsoft.Build.Tasks.CodeAnalysis.resources.dll" target="lib\netcoreapp2.0" />
+    <file src="Dlls\MSBuildTask\net46\**\Microsoft.Build.Tasks.CodeAnalysis.resources.dll" target="lib\net46" />
   </files>
 </package>
