--- a/src/NuGet/Microsoft.CodeAnalysis.CSharp.Features.nuspec
+++ b/src/NuGet/Microsoft.CodeAnalysis.CSharp.Features.nuspec
@@ -32,5 +32,8 @@
     <file src="Dlls\CSharpFeatures\Microsoft.CodeAnalysis.CSharp.Features.xml" target="lib\netstandard1.3" />
     <file src="Dlls\CSharpFeatures\Microsoft.CodeAnalysis.CSharp.Features.pdb*" target="lib\netstandard1.3" />
     <file src="$thirdPartyNoticesPath$" target="" />
+
+    <!-- Satellite assemblies -->
+    <file src="Dlls\CSharpFeatures\**\Microsoft.CodeAnalysis.CSharp.Features.resources.dll" target="lib\netstandard1.3" />
   </files>
 </package>
