--- a/src/NuGet/Microsoft.CodeAnalysis.CSharp.Scripting.nuspec
+++ b/src/NuGet/Microsoft.CodeAnalysis.CSharp.Scripting.nuspec
@@ -32,5 +32,8 @@
     <file src="Dlls\CSharpScripting\Microsoft.CodeAnalysis.CSharp.Scripting.xml" target="lib\netstandard1.3" />
     <file src="Dlls\CSharpScripting\Microsoft.CodeAnalysis.CSharp.Scripting.pdb*" target="lib\netstandard1.3" />
     <file src="$thirdPartyNoticesPath$" target="" />
+
+    <!-- Satellite assemblies -->
+    <file src="Dlls\CSharpScripting\**\Microsoft.CodeAnalysis.CSharp.Scripting.resources.dll" target="lib\netstandard1.3" />
   </files>
 </package>
