--- a/src/NuGet/Microsoft.CodeAnalysis.CSharp.Workspaces.nuspec
+++ b/src/NuGet/Microsoft.CodeAnalysis.CSharp.Workspaces.nuspec
@@ -33,5 +33,8 @@
     <file src="Dlls\CSharpWorkspace\Microsoft.CodeAnalysis.CSharp.Workspaces.xml" target="lib\netstandard1.3" />
     <file src="Dlls\CSharpWorkspace\Microsoft.CodeAnalysis.CSharp.Workspaces.pdb*" target="lib\netstandard1.3" />
     <file src="$thirdPartyNoticesPath$" target="" />
+
+    <!-- Satellite assemblies -->
+    <file src="Dlls\CSharpWorkspace\**\Microsoft.CodeAnalysis.CSharp.Workspaces.resources.dll" target="lib\netstandard1.3" />
   </files>
 </package>
