--- a/src/NuGet/Microsoft.CodeAnalysis.EditorFeatures.Wpf.nuspec
+++ b/src/NuGet/Microsoft.CodeAnalysis.EditorFeatures.Wpf.nuspec
@@ -31,5 +31,8 @@
   <files>
     <file src="Dlls\EditorFeatures.Wpf\Microsoft.CodeAnalysis.EditorFeatures.Wpf.dll" target="lib\net46" />
     <file src="Dlls\EditorFeatures.Wpf\Microsoft.CodeAnalysis.EditorFeatures.Wpf.xml" target="lib\net46" />
+
+    <!-- Satellite assemblies -->
+    <file src="Dlls\EditorFeatures.Wpf\**\Microsoft.CodeAnalysis.EditorFeatures.Wpf.resources.dll" target="lib\net46" />
   </files>
 </package>
