--- a/src/NuGet/Microsoft.CodeAnalysis.Scripting.Common.nuspec
+++ b/src/NuGet/Microsoft.CodeAnalysis.Scripting.Common.nuspec
@@ -52,5 +52,8 @@
     <file src="Dlls\Scripting\Microsoft.CodeAnalysis.Scripting.xml" target="lib\netstandard1.3" />
     <file src="Dlls\Scripting\Microsoft.CodeAnalysis.Scripting.pdb*" target="lib\netstandard1.3" />
     <file src="$thirdPartyNoticesPath$" target="" />
+
+    <!-- Satellite assemblies -->
+    <file src="Dlls\Scripting\**\Microsoft.CodeAnalysis.Scripting.resources.dll" target="lib\netstandard1.3" />
   </files>
 </package>
