--- a/src/NuGet/Microsoft.CodeAnalysis.VisualBasic.nuspec
+++ b/src/NuGet/Microsoft.CodeAnalysis.VisualBasic.nuspec
@@ -32,5 +32,8 @@
     <file src="Dlls\BasicCodeAnalysis\Microsoft.CodeAnalysis.VisualBasic.xml" target="lib\netstandard1.3" />
     <file src="Dlls\BasicCodeAnalysis\Microsoft.CodeAnalysis.VisualBasic.pdb*" target="lib\netstandard1.3" />
     <file src="$thirdPartyNoticesPath$" target="" />
+
+    <!-- Satellite assemblies -->
+    <file src="Dlls\BasicCodeAnalysis\**\Microsoft.CodeAnalysis.VisualBasic.resources.dll" target="lib\netstandard1.3" />
   </files>
 </package>
