--- a/src/NuGet/Microsoft.CodeAnalysis.Workspaces.MSBuild.nuspec
+++ b/src/NuGet/Microsoft.CodeAnalysis.Workspaces.MSBuild.nuspec
@@ -39,5 +39,8 @@
     <file src="Dlls\Workspaces.MSBuild\Microsoft.CodeAnalysis.Workspaces.MSBuild.xml" target="lib\net46" />
     <file src="Dlls\Workspaces.MSBuild\Microsoft.CodeAnalysis.Workspaces.MSBuild.pdb*" target="lib\net46" />
     <file src="$thirdPartyNoticesPath$" target="" />
+
+    <!-- Satellite assemblies -->
+    <file src="Dlls\Workspaces.MSBuild\**\Microsoft.CodeAnalysis.Workspaces.MSBuild.resources.dll" target="lib\net46" />
   </files>
 </package>
