--- a/src/NuGet/Microsoft.VisualStudio.LanguageServices.Razor.RemoteClient.nuspec
+++ b/src/NuGet/Microsoft.VisualStudio.LanguageServices.Razor.RemoteClient.nuspec
@@ -32,5 +32,8 @@
     <file src="Dlls\RazorVisualStudio\Microsoft.VisualStudio.LanguageServices.Razor.RemoteClient.dll" target="lib\net46" />
     <file src="Dlls\RazorVisualStudio\Microsoft.VisualStudio.LanguageServices.Razor.RemoteClient.xml" target="lib\net46" />
     <file src="$thirdPartyNoticesPath$" target="" />
+
+    <!-- Satellite assemblies -->
+    <file src="Dlls\RazorVisualStudio\**\Microsoft.VisualStudio.LanguageServices.Razor.RemoteClient.resources.dll" target="lib\net46" />
   </files>
 </package>
